Allow tracks to be played online Removed Download functionality Removed unused & unnecessary code Restructured Util